Fix page transition visibility problem by removing the sidebar expand-collapse animation for now

--- a/app/scss/theme/fancify.scss
+++ b/app/scss/theme/fancify.scss
@@ -1,6 +1,5 @@
 $view-animate-hide-speed: .7s;
 $view-animate-show-speed: 1s;
-$sidebar-toggle-speed: .3s;
 $animate-std-cubic: cubic-bezier(.250, .460, .450, .940);
 
 div.layout {
@@ -218,12 +217,4 @@ input.ng-invalid {
     > li.cl > ul li.cl.expand > ul {
         max-height: 1000px;
     }
-}
-
-.main {
-    @include transition(margin-right ease-in $sidebar-toggle-speed);
-}
-
-.sidebar {
-    //@include transition(width ease-in $sidebar-toggle-speed);
 }
